<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.TrySensorsActivity">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="73dp"
            android:layout_marginTop="23dp"
            android:layout_marginEnd="73dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_1_acc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginTop="11dp"
                android:layout_marginEnd="0dp"
                android:fontFamily="@font/raleway"
                android:paddingTop="17dp"
                android:paddingBottom="17dp"
                android:text="@string/accelerometer"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimaryLight"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btn_2_gyro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginTop="23dp"
                android:layout_marginEnd="0dp"
                android:fontFamily="@font/raleway"
                android:paddingTop="17dp"
                android:paddingBottom="17dp"
                android:text="@string/gyroscope"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimaryLight"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btn_3_magn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginTop="23dp"
                android:layout_marginEnd="0dp"
                android:fontFamily="@font/raleway"
                android:paddingTop="17dp"
                android:paddingBottom="17dp"
                android:text="@string/magnetometer"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimaryLight"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btn_4_prox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginTop="23dp"
                android:layout_marginEnd="0dp"
                android:fontFamily="@font/raleway"
                android:paddingTop="17dp"
                android:paddingBottom="17dp"
                android:text="@string/proximity"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimaryLight"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btn_5_bright"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginTop="23dp"
                android:layout_marginEnd="0dp"
                android:layout_marginBottom="11dp"
                android:fontFamily="@font/raleway"
                android:paddingTop="17dp"
                android:paddingBottom="17dp"
                android:text="@string/light_sensor"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimaryLight"
                android:textSize="18sp" />

        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>