<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btn_showSensors"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="13dp"
        android:layout_marginBottom="13dp"
        android:backgroundTint="@color/white"
        android:elevation="0dp"
        android:fontFamily="@font/raleway"
        android:text="@string/str_btn_main_showSensors"
        android:textColor="@color/colorAccent"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btn_trySensors"
        android:layout_width="0dp"
        android:layout_height="142dp"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="64dp"
        android:fontFamily="@font/raleway"
        android:padding="32dp"
        android:paddingTop="26dp"
        android:paddingBottom="26dp"
        android:text="@string/str_btn_main_trySensors"
        android:textColor="@color/colorPrimaryLight"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/space"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.66666666" />

    <Button
        android:id="@+id/btn_useCases"
        android:layout_width="0dp"
        android:layout_height="142dp"
        android:fontFamily="@font/raleway"
        android:paddingTop="26dp"
        android:paddingBottom="26dp"
        android:text="@string/str_btn_main_useCases"
        android:textColor="@color/colorPrimaryLight"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btn_showSensors"
        app:layout_constraintEnd_toEndOf="@+id/btn_trySensors"
        app:layout_constraintStart_toStartOf="@+id/btn_trySensors"
        app:layout_constraintTop_toBottomOf="@+id/space"
        app:layout_constraintVertical_bias="0.33333333" />

    <Button
        android:id="@+id/btn_main_info"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="13dp"
        android:layout_marginTop="11dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/button_states_round"
        android:fontFamily="cursive"
        android:text="i"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/colorAccent"
        android:textIsSelectable="false"
        android:textSize="13sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/btn_showSensors"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btn_showSensors" />

    <Space
        android:id="@+id/space"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/btn_showSensors"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>