<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <TextView
        android:id="@+id/tv_magZ"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:fontFamily="monospace"
        android:textColor="@android:color/black"
        android:textSize="26sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_mag3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_mag3" />

    <TextView
        android:id="@+id/tv_magX"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:fontFamily="monospace"
        android:textColor="@android:color/black"
        android:textSize="26sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_mag1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_mag1" />

    <TextView
        android:id="@+id/tv_aboutMagn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-condensed"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_aboutMagn_values"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="3dp"
        android:fontFamily="sans-serif-condensed"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_aboutMagn"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_magY"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:fontFamily="monospace"
        android:textColor="@android:color/black"
        android:textSize="26sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_mag2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_mag2" />

    <TextView
        android:id="@+id/tv_mag1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/raleway"
        android:text="@string/mag_x_ax"
        android:textAlignment="viewStart"
        android:textColor="@color/colorPrimaryLight"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_mag2"
        app:layout_constraintEnd_toStartOf="@+id/tv_magX"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_aboutMagn_values" />

    <TextView
        android:id="@+id/tv_mag2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/raleway"
        android:text="@string/mag_y_ax"
        android:textAlignment="viewStart"
        android:textColor="@color/colorPrimaryLight"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tv_magY"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_aboutMagn_values" />

    <TextView
        android:id="@+id/tv_mag3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/raleway"
        android:text="@string/mag_z_ax"
        android:textAlignment="viewStart"
        android:textColor="@color/colorPrimaryLight"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tv_magZ"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_mag2" />
</android.support.constraint.ConstraintLayout>