<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:elevation="8dp">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/raleway"
        android:text="@string/str_compass"
        android:textAlignment="textStart"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/btn_compass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_compass"
        app:layout_constraintTop_toTopOf="@+id/btn_compass" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/raleway"
        android:text="@string/str_call"
        android:textAlignment="textStart"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/btn_call"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_call"
        app:layout_constraintTop_toTopOf="@+id/btn_call" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/raleway"
        android:text="@string/str_saber"
        android:textAlignment="textStart"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/btn_saber"
        app:layout_constraintEnd_toStartOf="@+id/btn_usecases_info"
        app:layout_constraintStart_toEndOf="@+id/btn_saber"
        app:layout_constraintTop_toTopOf="@+id/btn_saber" />

    <ImageButton
        android:id="@+id/btn_call"
        android:layout_width="83dp"
        android:layout_height="83dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/colorPrimary"
        android:contentDescription="@string/str_call"
        android:foreground="@drawable/ic_call"
        android:foregroundTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btn_saber"
        android:layout_width="83dp"
        android:layout_height="83dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/colorPrimary"
        android:contentDescription="@string/str_saber"
        android:foreground="@drawable/ic_saber"
        android:foregroundTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_call" />

    <ImageButton
        android:id="@+id/btn_compass"
        android:layout_width="83dp"
        android:layout_height="83dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/colorPrimary"
        android:contentDescription="@string/str_compass"
        android:foreground="@drawable/ic_compass"
        android:foregroundTint="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/btn_call"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_usecases_info"
        android:layout_width="0dp"
        android:layout_height="26dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/button_states_round"
        android:backgroundTint="@color/colorPrimary"
        android:fontFamily="cursive"
        android:text="i"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        android:textIsSelectable="false"
        android:textSize="13sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/btn_saber"
        app:layout_constraintDimensionRatio="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btn_saber" />

</android.support.constraint.ConstraintLayout>