<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <TextView
        android:id="@+id/tv_aboutLinAcc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="sans-serif-condensed"
        android:textAlignment="viewStart"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/switch_gravityFilter"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_acc1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/raleway"
        android:text="@string/acc_x_ax"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        android:textSize="13sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_acc2"
        app:layout_constraintEnd_toStartOf="@+id/tv_accX"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_aboutAcc" />

    <TextView
        android:id="@+id/tv_acc2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/raleway"
        android:text="@string/acc_y_ax"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        android:textSize="13sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_linAcc_exist"
        app:layout_constraintEnd_toStartOf="@+id/tv_accY"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_aboutAcc" />

    <TextView
        android:id="@+id/tv_acc3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/raleway"
        android:text="@string/acc_z_ax"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        android:textSize="13sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_linAcc_exist"
        app:layout_constraintEnd_toStartOf="@+id/tv_accZ"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_acc2" />

    <TextView
        android:id="@+id/tv_accX"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="11dp"
        android:fontFamily="monospace"
        android:textColor="@android:color/black"
        android:textSize="26sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_acc1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_acc1" />

    <TextView
        android:id="@+id/tv_accY"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="11dp"
        android:fontFamily="monospace"
        android:textColor="@android:color/black"
        android:textSize="26sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_acc2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_acc2" />

    <TextView
        android:id="@+id/tv_accZ"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="11dp"
        android:fontFamily="monospace"
        android:textColor="@android:color/black"
        android:textSize="26sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_acc3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_acc3" />

    <TextView
        android:id="@+id/tv_aboutAcc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-condensed"
        android:textAlignment="viewStart"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/switch_gravityFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:checked="false"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/filter_force_of_gravity"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tv_linAcc_exist"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="monospace"
        android:textAlignment="viewStart"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_aboutLinAcc_values"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_aboutAcc_values"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="3dp"
        android:fontFamily="sans-serif-condensed"
        android:textAlignment="viewStart"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_aboutAcc"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_aboutLinAcc_values"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="sans-serif-condensed"
        android:textAlignment="viewStart"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/switch_gravityFilter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_aboutLinAcc" />
</android.support.constraint.ConstraintLayout>